force-app/main/default/objects/Document_Checklist__c/Document_Checklist__c.object-meta.xml
<CustomObject>
    <label>Document Checklist</label>
    <nameField>
        <displayFormat>Doc-{00000}</displayFormat>
        <label>Doc Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Checklist</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>