force-app/main/default/objects/Document_Checklist__c/fields/Applicable_For__c.field-meta.xml
<CustomField>
    <fullName>Applicable_For__c</fullName>
    <label>Applicable For</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Applicant</fullName>
            </value>
            <value>
                <fullName>Co-Applicant</fullName>
            </value>
            <value>
                <fullName>Guarantor</fullName>
            </value>
            <value>
                <fullName>Disbursement</fullName>
            </value>
            <value>
                <fullName>Gaurantor</fullName>
                <isActive>false</isActive>
                <label>Gaurantor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>