force-app/main/default/objects/Document_Checklist__c/fields/Applicant_Type__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Type__c</fullName>
    <label>Applicant Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Applicant</fullName>
            </value>
            <value>
                <fullName>Co-Applicant</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Main Director</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Main Promoter</fullName>
            </value>
            <value>
                <fullName>Promotor</fullName>
            </value>
            <value>
                <fullName>Division</fullName>
            </value>
            <value>
                <fullName>Shareholder</fullName>
            </value>
            <value>
                <fullName>Holding Company</fullName>
            </value>
            <value>
                <fullName>Subsidiary Company</fullName>
            </value>
            <value>
                <fullName>Proprietor</fullName>
            </value>
            <value>
                <fullName>Trustee</fullName>
            </value>
            <value>
                <fullName>Karta</fullName>
            </value>
            <value>
                <fullName>Co Parceners</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Guarantor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>