force-app/main/default/objects/Document_Checklist__c/fields/Constituation_of_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Constituation_of_Applicant__c</fullName>
    <label>Constituation of Applicant</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Sole Proprietorship</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Public Ltd</fullName>
            </value>
            <value>
                <fullName>LLP</fullName>
            </value>
            <value>
                <fullName>HUF</fullName>
            </value>
            <value>
                <fullName>Trust</fullName>
            </value>
            <value>
                <fullName>Society</fullName>
            </value>
            <value>
                <fullName>Section 25 Company</fullName>
            </value>
            <value>
                <fullName>Govt Body/Statutory Body</fullName>
            </value>
            <value>
                <fullName>Limited Liability Partnership</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Private Ltd</fullName>
            </value>
            <value>
                <fullName>Ltd</fullName>
                <isActive>false</isActive>
                <label>Ltd</label>
            </value>
            <value>
                <fullName>Private Ltd/Ltd</fullName>
                <isActive>false</isActive>
                <label>Private Ltd/Ltd</label>
            </value>
            <value>
                <fullName>Proprietorship</fullName>
                <isActive>false</isActive>
                <label>Proprietorship</label>
            </value>
            <value>
                <fullName>Pvt Ltd</fullName>
                <isActive>false</isActive>
                <label>Pvt Ltd</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>