force-app/main/default/objects/Document_Checklist__c/fields/Disbursement_Type__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_Type__c</fullName>
    <label>Disbursement Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>