force-app/main/default/objects/Document_Checklist__c/fields/Document_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Document_Subtype__c</fullName>
    <label>Document Sub Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Document_Sub_Type</valueSetName>
    </valueSet>
</CustomField>