force-app/main/default/objects/Document_Checklist__c/fields/Product_Parameters__c.field-meta.xml
<CustomField>
    <fullName>Product_Parameters__c</fullName>
    <label>Product Parameters</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CV</fullName>
            </value>
            <value>
                <fullName>CE</fullName>
            </value>
            <value>
                <fullName>Used</fullName>
            </value>
            <value>
                <fullName>Retail &amp; Strategic</fullName>
            </value>
            <value>
                <fullName>FTU &amp; FTB</fullName>
            </value>
            <value>
                <fullName>Business Loan</fullName>
            </value>
            <value>
                <fullName>Business Loan Plus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>