force-app/main/default/objects/Document_Checklist__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consent Pending</fullName>
            </value>
            <value>
                <fullName>Document Verification</fullName>
            </value>
            <value>
                <fullName>Disbursal In Progress</fullName>
            </value>
            <value>
                <fullName>Pre-Disbursal Document Collection</fullName>
            </value>
            <value>
                <fullName>Credit Due Deliquency</fullName>
                <isActive>false</isActive>
                <label>Credit Due Deliquency</label>
            </value>
            <value>
                <fullName>Credit Due Diligence</fullName>
                <isActive>false</isActive>
                <label>Credit Due Diligence</label>
            </value>
            <value>
                <fullName>Customer Due Diligence</fullName>
                <isActive>false</isActive>
                <label>Customer Due Diligence</label>
            </value>
            <value>
                <fullName>Others</fullName>
                <isActive>false</isActive>
                <label>Others</label>
            </value>
            <value>
                <fullName>Post Disbursement</fullName>
                <isActive>false</isActive>
                <label>Post Disbursement</label>
            </value>
            <value>
                <fullName>Pre Disbursement</fullName>
                <isActive>false</isActive>
                <label>Pre Disbursement</label>
            </value>
            <value>
                <fullName>Pre Login</fullName>
                <isActive>false</isActive>
                <label>Pre Login</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>