force-app/main/default/objects/Document_Checklist__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Document_Type__c</columns>
    <columns>Document_Subtype__c</columns>
    <columns>NAME</columns>
    <columns>Applicant_Type__c</columns>
    <columns>Is_Active__c</columns>
    <columns>LOB__c</columns>
    <columns>Is_Required__c</columns>
    <columns>Stage__c</columns>
    <columns>Applicable_For__c</columns>
    <columns>Constituation_of_Applicant__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>