force-app/main/default/objects/Document_Checklist__c/listViews/Required_Documents.listView-meta.xml
<ListView>
    <fullName>Required_Documents</fullName>
    <columns>Document_Type__c</columns>
    <columns>Document_Subtype__c</columns>
    <columns>NAME</columns>
    <columns>Applicant_Type__c</columns>
    <columns>Is_Active__c</columns>
    <columns>LOB__c</columns>
    <columns>Is_Required__c</columns>
    <columns>Stage__c</columns>
    <columns>Applicable_For__c</columns>
    <columns>Constituation_of_Applicant__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Required__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Required Documents</label>
</ListView>